--- a/boopMobile-updated repo/package.json
+++ b/boopMobile-updated repo/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/ng-toolkit": "^1.0.8",
     "cordova": "^9.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-nativestorage": "2.3.2",
